<resources>
    <string name="app_name">Antree Order</string>
    <string name="please_wait">Please Wait</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="no_account">No account?</string>
</resources>